--- a/restaurant/pubspec.yaml
+++ b/restaurant/pubspec.yaml
@@ -31,6 +31,20 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core:
+
+  cloud_firestore:
+
+  firebase_auth:
+  firebase_database:
+
+  firebase_analytics:
+
+  firebase_crashlytics:
+
+  firebase_performance:
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
